2006-02-15  Adam Jocksch  <ajocksch@redhat.com>

	* DummySourceWindow.java: Removed excess imports.

	* glade/frysk_source.glade: Re-added labels into glade file, changed
	padding and alignment of search bar items.
	* glade/frysk_source_prefs.glade: Changed padding.

2006-02-10  Adam Jocksch  <ajocksch@redhat.com>

	* DummySourceWindow.java: Added.

2006-02-10  Sami Wagiaalla  <swagiaal@redhat.com>

	* test/TestObserverSaveLoad.java (testExport): Cleaned up
	after test is run (closed bz 2318).

2006-02-09  Sami Wagiaalla  <swagiaal@redhat.com>

	* glade/procpop.glade: Added "Save" Button to 
	CustomObserverWindow
	* Gui.java (gui): Added splash screen showing/hiding.
	
2006-02-09  Adam Jocksch  <ajocksch@redhat.com>

	* images/SplashScreen.png: Added.

2006-02-09  Sami Wagiaalla  <swagiaal@redhat.com>

	* glade/procpop.glade: Renamed "Creat Custom Observer"
	to "Edit Custom Observers"

2006-02-09  Phil Muldoon  <pmuldoon@redhat.com>

	* glade/procpop.glade: Removed Credits button.

	* glade/procpop.glade: Added About window.

2006-02-08  Phil Muldoon  <pmuldoon@redhat.com>
	
	* Gui.java: Add Messages import statement back.

	* Gui.java: Revert i8n.

2006-02-07  Sami Wagiaalla  <swagiaal@redhat.com>

	* Gui.java (gui): Added a call to 
	ObserverManager.theManager.save().

2006-02-06  Phil Muldoon  <pmuldoon@redhat.com>

	* glade/procpop.glade: Removed View and Edit menus.

	* glade/procpop.glade: Added File -> Close menu.

2006-02-06  Sami Wagiaalla  <swagiaal@redhat.com>

	* glade/procpop.glade: Removed 'Hold' button.

2006-02-05  Andrew Cagney  <cagney@redhat.com>

	* Gui.java: New file, split out the bulk of FryskGui.
	* FryskGui.java: Split into Gui.java.

	* FryskGui.java (FRYSK_CONFIG): Delete, use Config.FRYSK_DIR.

2006-02-04  Sami Wagiaalla  <swagiaal@redhat.com>

	* glade/procpop.glade: Added a dummy lable to ActionSettins.

2006-02-03  Sami Wagiaalla  <swagiaal@redhat.com>

	* test/TestPrototypeCopying.java: New file. Test for prototype
	copying.
